@@ -2364,6 +2364,24 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
     return leaderNN.setSafeMode(action, isChecked);
   }
 
+  /**
+   * Allow snapshot on a directory.
+   * 
+   * @see ClientProtocol#allowSnapshot(String snapshotRoot)
+   */
+  public void allowSnapshot(String snapshotRoot) throws IOException {
+    namenode.allowSnapshot(snapshotRoot);
+  }
+  
+  /**
+   * Disallow snapshot on a directory.
+   * 
+   * @see ClientProtocol#disallowSnapshot(String snapshotRoot)
+   */
+  public void disallowSnapshot(String snapshotRoot) throws IOException {
+    namenode.disallowSnapshot(snapshotRoot);
+  }
+
   public long addCacheDirective(
       final CacheDirectiveInfo info, final EnumSet<CacheFlag> flags) throws IOException {
     checkOpen();
