@@ -674,6 +674,20 @@ message ListSnapshotsResponseProto {
   repeated SnapshotInfoProto snapshots = 1;
 }
 
+message AllowSnapshotRequestProto {
+  required string snapshotRoot = 1;
+}
+
+message AllowSnapshotResponseProto {
+}
+
+message DisallowSnapshotRequestProto {
+  required string snapshotRoot = 1;
+}
+
+message DisallowSnapshotResponseProto {
+}
+
 message PingRequestProto { // empty request
 }
 
@@ -848,6 +862,10 @@ service ClientNamenodeProtocol {
       returns(DeleteSnapshotResponseProto);
   rpc listSnapshots(ListSnapshotsRequestProto)
       returns(ListSnapshotsResponseProto);
+  rpc allowSnapshot(AllowSnapshotRequestProto)
+      returns(AllowSnapshotResponseProto);
+  rpc disallowSnapshot(DisallowSnapshotRequestProto)
+      returns(DisallowSnapshotResponseProto);   
   rpc modifyAclEntries(ModifyAclEntriesRequestProto) returns(ModifyAclEntriesResponseProto);
   rpc removeAclEntries(RemoveAclEntriesRequestProto) returns(RemoveAclEntriesResponseProto);
   rpc removeDefaultAcl(RemoveDefaultAclRequestProto) returns(RemoveDefaultAclResponseProto);
