@@ -6,8 +6,8 @@
      6	2012-10-20, HDFS-4077. , Suresh Srinivas, a2d837b0e99965aa9e1dab4d8a89fb1a93d075a5, 54, HDFS-4077. Adding a file missed in the commit r1400318.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1400350 13f79535-47bb-0310-9956-ffa450edef68 
      7	2012-10-21, HDFS-4087. , Suresh Srinivas, 625d7cf20ba87d183453f8462b92b6c2e4f56c98, 266, HDFS-4087. Protocol changes for listSnapshots functionality. Contributed by Brandon Li.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1400698 13f79535-47bb-0310-9956-ffa450edef68 
      8	2012-10-21, HDFS-4079. , Tsz-wo Sze, 820b5495caf032983f6bef2c1cd95af44ed7fa10, 355, HDFS-4079. Add SnapshotManager which maintains a list for all the snapshottable directories and supports snapshot methods such as setting a directory to snapshottable and creating a snapshot.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1400728 13f79535-47bb-0310-9956-ffa450edef68 
-
      9	2012-10-22, HDFS-4078. , Tsz-wo Sze, 9a0651b4b86727910ae29d055aac6a23490b5ed3, 325, HDFS-4078. Handle replication in snapshots.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1400743 13f79535-47bb-0310-9956-ffa450edef68 
+
     10	2012-10-23, HDFS-4084. , Suresh Srinivas, 4fde5c01901b6acb4363747d01603664a0283fc4, 388, HDFS-4084. Provide CLI support to allow and disallow snapshot on a directory. Contributed by Brondon Li.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401444 13f79535-47bb-0310-9956-ffa450edef68 
     11	2012-10-24, HDFS-4091. , Tsz-wo Sze, b897bb8992b3ab70febbb0400c565c8141cc9038, 108, HDFS-4091. Add snapshot quota to limit the number of snapshots allowed.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401868 13f79535-47bb-0310-9956-ffa450edef68 
     12	2012-10-25, HDFS-4097. , Suresh Srinivas, 2d5334931ed569e11b293a49fb7f475a09da2616, 481, HDFS-4097. Provide CLI support for createSnapshot. Contributed by Brandon Li.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401971 13f79535-47bb-0310-9956-ffa450edef68 
